Added ability to upload pictures

--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -13,9 +13,27 @@ html, body {
   font-style: normal;
 }
 
+button {
+  flex-basis: 48%;
+  color: red;
+  background-color: white;
+  font-size: 15px;
+  border: 2px solid #f2f2f2;
+  line-height: 2;
+  padding: 5px;
+}
+
+button:focus {
+  outline: 0;
+}
+
+button:hover {
+  border-color: #065784;
+}
+
 p {
   font-size: 1.6rem;
-  line-height: 1.5; 
+  line-height: 1.5;
 }
 
 h1 {
@@ -43,6 +61,40 @@ h1 {
   margin: 0 2rem 2rem 2rem;
 }
 
+.form {
+  max-width: 40vw;
+  margin: 0 auto;
+  padding: 4rem;
+  text-align: center;
+}
+
+.form input {
+  font-family: sans-serif;
+  background: #f2f2f2;
+  width: 100%;
+  border: none;
+  padding: 1.5rem;
+  box-sizing: border-box;
+  font-size: 1.6rem;
+  margin: 0 0 1.5rem;
+}
+
+.form button {
+  font-family: sans-serif;
+  text-transform: uppercase;
+  background: #065784;
+  width: 100%;
+  border: none;
+  padding: 1.5rem;
+  color: white;
+  font-size: 1.4rem;
+  cursor: pointer;
+}
+
+.form button:hover {
+  background-color: #537a8f;
+}
+
 .photo {
   width: calc(100% + 4rem);
   margin: -2rem 0rem 0rem -2rem;
@@ -53,17 +105,16 @@ h1 {
   justify-content: center;
 }
 
-.remove-button {
-  flex-basis: 48%;
-  color: red;
-  background-color: white;
-  font-size: 15px;
-  border: 2px solid #f2f2f2;
-  line-height: 2;
-  padding: 5px;
+.add-icon {
+  margin: 2rem auto;
+  display: table;
+  padding: 4rem;
+  background: url("https://image.flaticon.com/icons/svg/60/60740.svg") center no-repeat;
+  background-size: contain;
+  border: none;
 }
 
-@media (max-width: 560px){
+@media (max-width: 560px) {
   h1 {
     font-size: 10rem;
   }
