--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -46,6 +46,11 @@ h1 {
   color: black;
 }
 
+h1 a {
+  text-decoration: none;
+  color: black;
+}
+
 .photo-grid {
   max-width: 1000px;
   margin: 0 auto;
@@ -55,70 +60,190 @@ h1 {
 
 .figure {
   flex-basis: calc(33.333% - 4rem);
-  border: 0.2rem solid #d3d3d3;
+  border: 1px solid #d3d3d3;
   padding: 2rem;
   flex-grow: 1;
   margin: 0 2rem 2rem 2rem;
 }
 
-.form {
-  max-width: 40vw;
+.figure .single-photo {
+  flex-basis: calc(33.333% - 4rem);
+  flex-grow: 1;
+  flex-shrink: 0;
+  margin: 0 2rem 2rem 2rem;
+  padding: 2rem;
+  border: 1px solid #d3d3d3;
+  background: #fff;
+  position: relative;
+}
+
+.single-photo {
+  max-width: 1000px;
   margin: 0 auto;
-  padding: 4rem;
-  text-align: center;
+  display: flex;
+  background: #fff;
+  border: black;
 }
 
-.form input {
-  font-family: sans-serif;
-  background: #f2f2f2;
+.single-photo .figure {
+  box-shadow: none;
+  margin: 0 2rem 0 0;
+  border: 0;
+  padding: 0;
+  flex: 1 0 60%;
+  max-width: 60%;
+}
+
+.single-photo .comments {
+  flex: 1 0 40%;
+  max-width: 40%;
+}
+
+.single-photo .photo {
   width: 100%;
-  border: none;
-  padding: 1.5rem;
-  box-sizing: border-box;
-  font-size: 1.6rem;
-  margin: 0 0 1.5rem;
-}
-
-.form button {
-  font-family: sans-serif;
-  text-transform: uppercase;
-  background: #065784;
-  width: 100%;
-  border: none;
-  padding: 1.5rem;
-  color: white;
-  font-size: 1.4rem;
-  cursor: pointer;
-}
-
-.form button:hover {
-  background-color: #537a8f;
+  margin: 0;
 }
 
 .photo {
   width: calc(100% + 4rem);
-  margin: -2rem 0rem 0rem -2rem;
+  margin-left: -2rem;
+  margin-top: -2rem;
+  max-width: none;
 }
 
-.button-container {
-  display: flex;
-  justify-content: center;
+.comment {
+  width: 100%
 }
 
-.add-icon {
-  margin: 2rem auto;
-  display: table;
-  padding: 4rem;
+.comment p {
+  border-bottom: 1px solid #d3d3d3;
+  padding: 0.5rem 0;
+}
+
+.comment-form input, .comment-form textarea {
+  width: 100%;
+  border: 0;
+  font-size: 1.3rem;
+  padding: 1rem 0;
+  border-bottom: 1px solid #d3d3d3;
+  outline: none;
+  resize: vertical;
+}
+
+.addIcon {
   background: url("https://image.flaticon.com/icons/svg/60/60740.svg") center no-repeat;
   background-size: contain;
+  padding: 40px;
+  display: table;
+  margin: 20px auto;
   border: none;
 }
 
-@media (max-width: 560px) {
+.button-container {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button, .button {
+  border: 2px solid #f2f2f2;
+  background: none;
+  flex-basis: 48%;
+  display: inline-block;
+  line-height: 2;
+  text-decoration: none;
+  padding: 5px;
+  text-align: center;
+  font-size: 15px;
+  color: red;
+  transition: all 0.2s;
+  box-sizing: padding-box;
+}
+
+button:hover, .button:hover, button:focus, .button:focus {
+  border-color: #00f;
+  outline: 0;
+}
+
+.speech-bubble {
+  background: url("https://d30y9cdsu7xlg0.cloudfront.net/png/51904-200.png") center no-repeat;
+  background-size: contain;
+  padding: 10px;
+  margin: 5px;
+  display: inline-block;
+  border: none;
+  position: relative;
+}
+
+.comment-count {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black
+}
+
+.form {
+  width: 360px;
+  padding: 0 0 0;
+  margin: auto;
+}
+
+.form input {
+  font-family: sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+
+.form button {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #065784;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+
+.form button:hover, .form button:active, .form button:focus {
+  background: #7B8589;
+}
+
+.loader {
+  height: 20%;
+  width: 100%;
+  display: flex;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
+  font-size: 28pt;
+}
+
+@media (max-width: 800px) {
   h1 {
     font-size: 10rem;
   }
   p {
     font-size: 1.6rem;
+  }
+  .form input {
+    width: 300px;
+    margin-left: 3rem;
+  }
+  .form button {
+    width: 300px;
+    margin: 6rem 3rem;
   }
 }
